--- a/py-Django/myblog/blog/templates/blog/index.html
+++ b/py-Django/myblog/blog/templates/blog/index.html
@@ -3,10 +3,15 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
+    <title>Page</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
     <script src="main.js"></script>
+    <script type="text/javascript">
+        function page_onload(){
+        document.getElementById("name").value = "XXX小明";
+        }
+    </script>
 </head>
 <body>
     <h1>
@@ -16,5 +21,12 @@
         <a href="{% url 'blog:article_page' article.id %}">{{article.title}}</a>
         <br>
     {% endfor %}
+    <input id="name" name="name" type="text" value="" />
+    <script>
+        while (True){
+            print("123")
+        }
+    </script>
 </body>
+
 </html>
